Primera actualización desde VS Code

--- a/404.html
+++ b/404.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex,nofollow">
+  <meta name="theme-color" content="#FFFFFF">
+  <link rel="manifest" href="/manifest.webmanifest">
   <title>Página no encontrada | Asesorías en IA</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+  <a href="#main-content" class="skip-link">Saltar al contenido</a>
   <header class="header">
     <div class="container header-container">
       <a href="index.html" class="logo">Asesorías IA</a>
